# Git-Workflow-Lab

./: .cspell.json  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .mlc_config.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  PROJECT_IMPROVEMENTS.md  README.md  README_EN.md  ROADMAP.md  SECURITY.md  cspell.json  docker-compose.yml  docs-requirements.txt  pyproject.toml  release-please-config.json
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  doc-issue.yml  feature-request.yml
.github/workflows/: check-lessons.yml  code-quality.yml  docker.yml  pages.yml  release-please.yml  security-scan.yml
docker/gitea/: entrypoint.sh
docker/terminal/: Dockerfile  Dockerfile.codeserver  settings.json  welcome.sh
docs/: _lesson-template.md  _lesson_template.md  faq.md  i18n-plan.md  i18n.md  learning-path.md  lesson-00-install-and-config.md  lesson-00-terminal-basics.md  lesson-01-init-push.md  lesson-02-workspace-staging-history.md  lesson-03-remote-and-sync.md  lesson-04-branches-and-pr.md  lesson-05-merge-conflict.md  lesson-06-rebase-clean-history.md  lesson-06a-ssh-setup-and-clone.md  lesson-06b-collaboration-conventions.md  lesson-07-cherry-pick-and-revert.md  lesson-08-reflog-and-recovery.md  lesson-09-stash-usage.md  lesson-10-first-ci-workflow.md  lesson-11-fix-broken-pipeline.md  lesson-12-multi-stage-pipeline-and-secrets.md  lesson-13-tags-and-releases.md  lesson-14-project-files.md  lesson-15-git-hooks.md  lesson-16-large-repo.md  lesson-17-release-automation.md  lessons-overview.md  viewer.html
docs-sphinx/: conf.py  index-en.md  index.md
docs-sphinx/_static/css/: custom.css
docs-sphinx/_static/js/: custom.js
docs-sphinx/_templates/: language_switcher.html
docs-sphinx/development/: architecture.md
docs-sphinx/getting-started/: installation.md  introduction.md  quickstart.md
scripts/: build-site.py  build_site.py  fix-quotes.py  fix_quotes.py  init-gitea-manual.sh  init-gitea.sh
site/: achievements.html  ai-assistant.html  best-practices.html  challenges.html  cheatsheet.html  command-builder.html  command-sheet.html  daily-plan.html  diagnostics.html  flashcards.html  gamification.html  git-debugger.html  git-visualizer.html  gitflow-simulator.html  index.html  interview.html  learning-path.html  notes.html  playground.html  projects.html  quick-start.html  quiz.html  reference.html  sandbox.html  search.html  skill-tree.html  status.html  test-iframe.html  workspace.html
site/assets/css/: style.css
site/assets/js/: main.js
site/lessons/: index.html
tests/: __init__.py  test_build_site.py
