[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-workflow-lab"
version = "1.2.1"
description = "一个面向 Git 学习与协作实践的教学仓库"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Git Workflow Lab Contributors"}
]
keywords = ["git", "learning", "tutorial", "docker", "ci-cd"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Documentation",
]

dependencies = [
    "markdown>=3.6,<4",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-intl>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/AlexanderJ-Carter/Git-Workflow-Lab"
Documentation = "https://alexanderj-carter.github.io/Git-Workflow-Lab/"
Repository = "https://github.com/AlexanderJ-Carter/Git-Workflow-Lab.git"
Issues = "https://github.com/AlexanderJ-Carter/Git-Workflow-Lab/issues"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["*"]

# Black 配置
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | _build
    | _site
    | data
)/
'''

# isort 配置
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "_build", "_site", "data"]

# MyPy 配置
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["markdown.*"]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=scripts --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["scripts"]

# Coverage 配置
[tool.coverage.run]
source = ["scripts"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Bandit 配置
[tool.bandit]
exclude_dirs = ["tests", ".venv", "_build", "_site", "data"]
skips = ["B101", "B601"]
